Added the neccessary metrics